fix(diary): MCDT-451 edit "add classes" style to wrap lines.

--- a/src/main/resources/public/sass/global/components/_main.scss
+++ b/src/main/resources/public/sass/global/components/_main.scss
@@ -470,6 +470,12 @@ label.checkbox {
 .autocomplete-selected {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+
+  .search-input-ul {
+    padding: 4px;
+  }
+
 }
 
 .custom-flex-table {
